--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-<body background="brook-one-piece-378.jpg">
+<body>
     <header class="text-center p-3">
         <h1 class="app-title">APP WEB MÚSICA COM IA</h1>
-        <p class="note">OBSERVAÇÃO: Coloque seu pulso esquerdo na frente da webcam para tocar a música de one piece. Coloque seu pulso direito para tocar a música tema de jojo's.</p>
+        <p class="note">OBSERVAÇÃO: Coloque seu pulso esquerdo na frente da webcam para tocar a música de peter pan. Coloque seu pulso direito para tocar a música tema de harry potter.</p>
     </header>
 
     <div class="container">
@@ -21,6 +21,8 @@
         </div>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
